resolved the issue of the overlay not covering the full screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,6 @@
 }
 
 
-
-
 /* CSS Variables */
 :root {
     --primary-font: "pokemon-logo-replica", Arial, sans-serif;
@@ -36,17 +34,45 @@
     --Red: #E21C25;
 }
 
-
-
-
-/* Home Page */
-/* Home Page Image */
+/* Home Page Background Image */
 #home-page {
     /* Image of Pokemon Cards by Mick Haupt. Acessed via unsplash.com */
     background: url(../images/homepage-background-image.jpg) no-repeat center fixed;
     background-size: cover;
     min-height: 100vh;   
 }
+
+
+/* Ready to play Background Image */
+#ready-to-play-page {
+    /* Image of Pokemon Charizard by Halfcut Pokemon. Acessed via unsplash.com */
+    background: url(../images/readytoplay-image.jpg) no-repeat center fixed;
+    background-size: cover; 
+    min-height: 100vh;   
+}
+
+
+/* Buttons */
+
+/* General Button Styling */
+#myBtn, #button-start-game,
+#button-hell-yes, #button-hell-no{
+    font-family: var(--secondary-font);
+    font-size: 1.2rem;
+    text-decoration: none;
+    border-radius: 8px;
+    padding: 15px 5px;
+    margin: 20px;
+    text-align: center;
+    transition: transform 0.2s ease;
+    width: 300px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 /* W3 Schools Modal Example */
 /* Modal background */
@@ -102,17 +128,72 @@
 }
 
 
+/* Buttons homepage */
+/* Button conatiner */
+#button-container-home-page {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    margin-top: 70px;
+}
+
+#button-start-game, #myBtn {
+    background-color: var(--Red);
+    color: var(--Dark-Blue);
+    border: 2px solid var(--Dark-Blue);
+    min-width: 300px;
+}
+
+#button-start-game:hover, #myBtn:hover {
+    transform: scale(1.1);
+    background-color: var(--Light-Blue);
+    color: var(--Grey);
+    border: 2px solid (--Grey);
+}
+   
+
+/* Buttons Ready to Play Page */
+/* Buttons contrainer ready to play page buttons */
+#button-container-ready-to-play {
+    display: flex;
+    justify-content: center;
+    margin-top: 120px;
+    z-index: 2;
+}
+
+#button-hell-yes, #button-hell-no {
+    background-color: var(--Yellow);
+    color: var(--Blue);
+    border: 2px solid var(--Blue);
+}
+
+#button-hell-yes:hover, #button-hell-no:hover {
+    transform: scale(1.1);
+    background-color: var(--Red);
+    color: var(--White);
+    border: 2px solid var(--White);
+}
 
 
-/* Black Semi-Transparent overlay */
+/* Black Semi-Transparent overlay homepage and ready to play page*/
+#home-page,
+#ready-to-play-page {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 #home-page::before,
 #ready-to-play-page::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1; /* Places the overlay below the content */
     pointer-events: none; /* Allows the mouse and buttons to work */
@@ -126,8 +207,6 @@
 }
 
 
-
-
 /* Pokemon style title */
 #title {
     font-family:  var(--primary-font);
@@ -139,67 +218,6 @@
     text-align: center;
     z-index: 2;
 }
-
-
-
-
-/* Buttons contrainer ready to play page buttons */
-#button-container-ready-to-play {
-    display: flex;
-    justify-content: center;
-    margin-top: 120px;
-    z-index: 2;
-
-}
-
-/* Button conatiner */
-#button-container-home-page {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 2;
-    margin-top: 70px;
-}
-
-/* Butto */
-
-#button, #myBtn {
-    font-family: var(--secondary-font);
-    font-size: 1.2rem;
-    text-decoration: none;
-    background-color: var(--Red);
-    color: var(--Dark-Blue);
-    border: 2px solid var(--Dark-Blue);
-    border-radius: 8px;
-    padding: 15px 5px;
-    margin: 20px;
-    text-align: center;
-    min-width: 300px;
-    transition: transform 0.2s ease;
-}
-
-#button:hover, #myBtn:hover {
-    transform: scale(1.1);
-    background-color: var(--Light-Blue);
-    color: var(--Grey);
-    border: 2px solid (--Grey);
-}
-
-
-
-
-/* Ready to Play Page */
-/* Ready to play Image */
-#ready-to-play-page {
-    /* Image of Pokemon Charizard by Halfcut Pokemon. Acessed via unsplash.com */
-    background: url(../images/readytoplay-image.jpg) no-repeat center fixed;
-    background-size: cover; 
-    min-height: 100vh;   
-}
-
-
-
 
 
 /* Media Queries */
